--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
-	/* Stíll til að halda samræmi við thingeyjarsveit.is */
-	
-  background-color: #EFECE6 !important;
+	/* Stíll til að halda samræmi við hafnarfjordur.is */
+	background-color: #EFECE6 !important;
 	color: #252525;
     line-height: 1.4;
     font-family: Lato, "Segoe UI", Roboto, "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
@@ -15,23 +14,68 @@ input[type=text] {
     width: 171.08px !important; 
 }
 button{
-	/* Stíll til að gera takkann eins og aðrir takkar á thingeyjarsveit.is */
+	/* Stíll til að gera takkann eins og aðrir takkar á hafnarfjordur.is */
     border-radius: 0 !important;
     background-color: #2c549c !important;
     box-shadow: none !important;
 }
 .grid-container{
-	/* Grid með tveimur dálkum */
+	/* Grid með þremur dálkum */
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
 }
 .grid-item {
     display: inline-grid;
 }
 #dates_gray_div {
-	/* Fyrir gráa tunnu lista */
+	/* Fyrir grátunnu lista */
+    padding-left: 1em;
     margin-top: 1em;
     height: 20px;
+}
+#dates_blue_div {
+	/* Fyrir blátunnu lista */
+    margin-top: 1em;
+    padding-left: 1em;
+
+}
+#dates_graen_div {
+	/* Fyrir græntunnu lista */
+    margin-top: 1em;
+    padding-left: 1em;
+}
+.marginbot{
+    margin-bottom: 100px;
+}
+#graydatebox{
+	/* Birtir box sem inniheldur næstu losun á grátunnum */
+    background-color: gray !important;
+    width: 33%;
+    float: left;
+    height: 100px !important;
+    color: white !important;
+    text-align: center;
+    padding-top: 25px !important;
+}
+#bluedatebox{
+	/* Birtir box sem inniheldur næstu losun á blátunnum */
+    background-color: #2c549c !important;
+    width: 33%;
+    float: left;
+    height: 100px !important;
+    color: white !important;
+    text-align: center ;
+    padding-top: 25px !important;
+}
+#greendatebox{
+	/* Birtir box sem inniheldur næstu losun á græntunnum */
+    background-color: green !important;
+    width: 33%;
+    float: left;
+    height: 100px !important;
+    color: white !important;
+    text-align: center;
+    padding-top: 25px ;
 }
 #dates_blue_div {
 	/* Fyrir bláa tunnu lista */
