--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	/* Stíll til að halda samræmi við hafnarfjordur.is */
+	/* Stíll til að halda samræmi við heimasíðu sveitarfélagsins */
 	background-color: #EFECE6 !important;
 	color: #252525;
     line-height: 1.4;
