--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ input[type=text] {
     width: 171.08px !important; 
 }
 button{
-	/* Stíll til að gera takkann eins og aðrir takkar á hafnarfjordur.is */
+	/* Stíll til að gera takkann eins og aðrir takkar á heimasíðu sveitarfélagsins */
     border-radius: 0 !important;
     background-color: #2c549c !important;
     box-shadow: none !important;
