--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	/* Stíll til að halda samræmi við heimasíðu sveitarfélagsins */
+	/* Stíll til að halda samræmi við hafnarfjordur.is */
 	background-color: #EFECE6 !important;
 	color: #252525;
     line-height: 1.4;
@@ -14,7 +14,7 @@ input[type=text] {
     width: 171.08px !important; 
 }
 button{
-	/* Stíll til að gera takkann eins og aðrir takkar á heimasíðu sveitarfélagsins */
+	/* Stíll til að gera takkann eins og aðrir takkar á hafnarfjordur.is */
     border-radius: 0 !important;
     background-color: #2c549c !important;
     box-shadow: none !important;
@@ -76,50 +76,4 @@ button{
     color: white !important;
     text-align: center;
     padding-top: 25px ;
-}
-#dates_blue_div {
-	/* Fyrir bláa tunnu lista */
-    margin-top: 1em;
-
-}
-#dates_green_div {
-	/* Fyrir græna tunnu lista */
-    margin-top: 1em;
-
-}
-.marginbot{
-    margin-bottom: 100px;
-}
-.bluedatebox{
-	/* Birtir box sem inniheldur næstu losun á blátunnum */
-    background-color: #2c549c !important;
-    width: 50% !important;
-    display: float;
-    float: right !important;
-    height: 100px !important;
-    color: white !important;
-    text-align: center ;
-    padding-top: 25px !important;
-}
-.graydatebox{
-	/* Birtir box sem inniheldur næstu losun á grátunnum */
-    background-color: gray !important;
-    width: 50% !important;
-    display: float;
-    float: left !important;
-    height: 100px !important;
-    color: white !important;
-    text-align: center;
-    padding-top: 25px !important;
-}
-.greendatebox{
-	/* Birtir box sem inniheldur næstu losun á grænni tunnum */
-    background-color: green !important;
-    width: 50% !important;
-    display: float;
-    float: left !important;
-    height: 100px !important;
-    color: white !important;
-    text-align: center;
-    padding-top: 25px !important;
 }
